fix issues after the review
Signed-off-by: aserkes <andrii.serkes@oracle.com>